# pinkfong-analysis

./: pyproject.toml
data/interim/: channel_metadata.csv  channel_stats.csv  playlist_videos.csv  tags.csv  video_stats.csv
data/raw/: channel_data.csv  channel_stats.csv  channels.csv  pinkfong_stats.csv  video_categories.csv
data/tableau/: channel_metrics.csv  kpi.csv  view_trend.csv
databases/: erd_code.txt  schema.sql
databases/queries/: eda.sql  growth_analysis_metrics.sql
notebooks/: 1_growth_analysis.ipynb  2_eda.ipynb  3_hypothesis_testing.ipynb  bebefinn_profile.html  growth_analysis.ipynb  ollie_profile.html  pinkfong_profile.html
references/BabyShark/forPrint/: BabyShark_print.ai
references/BabyShark/forScreen/: BabyShark_screen.ai
references/Bebefinn/forPrint/: Bebefinn_print.ai
references/Bebefinn/forScreen/: Bebefinn_screen.ai
references/Pinkfong/forPrint/: Pinkfong_print.ai
references/Pinkfong/forScreen/: Pinkfong_screen.ai
reports/: project_design.md  tableau_dashboard.twbx
src/: extract_pinkfong_data.py  fetch_id_with_handle.py  load_pinkfong_data.py  transform_pinkfong_data.py  yt_api_fetch_channels_data.py  yt_api_fetch_kids_channels.py  yt_api_fetch_pinkfong_data.py
src/utils/: db_utils.py
