[project]
name = "pinkfong-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "google-api-python-client>=2.156.0",
    "google-generativeai==0.8.3",
    "ipykernel==6.29.4",
    "ipython==8.21.0",
    "ipywidgets==7.7.1",
    "matplotlib==3.7.5",
    "missingno==0.5.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "seaborn==0.12.2",
    "sqlalchemy==2.0.30",
    "ydata-profiling==4.10.0",
]
